--- a/config/config.yaml
+++ b/config/config.yaml
@@ -19,4 +19,8 @@ prepare_callbacks:
   root_dir: artifacts/prepare_callbacks
   tensorboard_root_log_dir: artifacts/prepare_callbacks/tensorboard_log_dir
   checkpoint_model_filepath: artifacts/prepare_callbacks/chechpoint_dir/model.h5
-  
+
+
+training:
+  root_dir: artifacts/training
+  trained_model_path: artifacts/training/model.h5
